# .github

./: .gitignore  .pre-commit-hooks.yaml  CLAUDE.md  README.md  RULES.md  gitignore.global  pyproject.toml
.claude/skills/bootstrap-repo/: SKILL.md
.claude/skills/fix-logo/: SKILL.md
.claude/skills/fix-readme/: SKILL.md
.claude/skills/maintain-repos/: SKILL.md
.github/actions/check-version/: action.yml
.github/workflows/: audit.yml  ci.yml  create-release.yml  lint.yml  pii-scan.yml  publish-pypi.yml  release.yml  sync-repo-description.yml  test.yml  typecheck.yml
scripts/: audit-repos.sh  check-tracked-ignored.sh  commit-repos.sh  github-contributions-chart.py  report-taglines.sh  set-secret-all-repos.sh  settings_optimizer.py  sync-all.sh  sync-claude-md.sh  sync-dependabot.sh  sync-gitignore.sh  sync-license.sh  sync-precommit.sh  sync-readme-license.sh  sync-readme-logo.sh  sync-repo-descriptions.sh  sync-sandbox.sh  sync-settings.sh
scripts/lib/: common.sh  extract_tagline.py  style.sh
scripts/templates/: CLAUDE.md
src/gitguard/: __init__.py  __main__.py  cli.py  engine.py  git.py  github.py  repo.py  settings_optimizer.py  tagline.py
src/gitguard/commands/: commit.py  report.py
src/gitguard/rules/: __init__.py  _helpers.py  _registry.py  claude_sandbox.py  cli.py  default_branch.py  python.py  (+16 more)
src/tsilva_maintain/: __init__.py  __main__.py  cli.py  engine.py  git.py  github.py  output.py  progress.py  repo.py  settings_optimizer.py
tests/: conftest.py  test_ci_passing.py  test_engine.py  test_repo.py  test_rules.py  test_workflows_passing.py
(+41 files in other folders)
