[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitguard"
version = "0.1.0"
description = "Compliance audit and maintenance CLI for the tsilva GitHub organization"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Tiago Silva" }]

[project.scripts]
gitguard = "gitguard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gitguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
